--- a/index.html
+++ b/index.html
@@ -61,18 +61,21 @@
         <img src="ima/menu.png" alt="Menu Icon">
     </div>
     <div class="logo">
-        <img src="ima/logo.png" alt="Logo" style="height: 80px;">
+        <a href="index.html">
+            <img src="ima/logo.png" alt="Logo" style="height: 80px;">
+        </a>
     </div>
+    
     <div class="menu" id="menu">
         <div class="close-icon" onclick="toggleMenu()">
             <img src="ima/cerrar.png" alt="Close Icon">
         </div>
         <a href="index.html">Home</a>
         <div class="submenu">
-            <a href="#" onclick="toggleSubmenu(event)">Catálogo</a>
+            <a href="#" onclick="toggleSubmenu(event)">Nuestros productos</a>
             <div class="submenu-content" id="submenu-content">
                 <a href="pijama-whalas.html">Pijama Whalas</a>
-                <a href="merch.html">Merch</a>
+                <a href="catalogo.html">Merch</a>
             </div>
         </div>
         <a href="#contacto">Contacto</a>
