--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <img src="ima/ba.png" alt="Whale pajamas">
         </div>
         <div class="content">
-            <h2 class="title">Whales</h2>
+            <h2 class="title">Whalas</h2>
             <p class="description">Comodidad, elegancia son factores que tiene nuestro producto.</p>
             <p class="description">Si te decides a la escuelta con ropa normal, ¿por qué no usar nuestro pijama Whales?</p>
             <a href="#" class="button">Comprar</a>
