--- a/catalogo.html
+++ b/catalogo.html
@@ -102,7 +102,7 @@
     <div class="encabezado">
         <div class="ordenar">
             <h2>Ordenar Por:</h2> 
-            <div class="ordenar-content" onclick="ordenarCatalogo()">
+            <div class="ordenar-content">
                 <p onclick="ordenarCatalogo('az')">Nombre A-Z</p>
                 <p onclick="ordenarCatalogo('za')">Nombre Z-A</p>
                 <p onclick="ordenarCatalogo('precio-asc')">Precio Menor-Mayor</p>
