--- a/catalogo.html
+++ b/catalogo.html
@@ -99,10 +99,10 @@
         </div>
     </div>
     
-    <div class="encabezado">
+    <div class="encabezado">    
         <div class="ordenar">
             <h2>Ordenar Por:</h2> 
-            <div class="ordenar-content">
+            <div class="ordenar-content" onclick="ordenarCatalogo()">
                 <p onclick="ordenarCatalogo('az')">Nombre A-Z</p>
                 <p onclick="ordenarCatalogo('za')">Nombre Z-A</p>
                 <p onclick="ordenarCatalogo('precio-asc')">Precio Menor-Mayor</p>
