--- a/catalogo.html
+++ b/catalogo.html
@@ -133,6 +133,21 @@
         </div>
     </div>
     
+    <footer class="footer">
+        <ul class="footer-menu">
+          <li><a href="#Contacto">Contacto</a></li>
+          <li><a href="#Politicas">Políticas De Privacidad</a></li>
+          <li><a href="#terminos">Términos De Servicio</a></li>
+          <li><a href="#polrem">Política De Reembolso</a></li>
+        </ul>
+        <div class="payment-methods">
+          <img src="ima/pay.png" alt="Formas de pago">
+        </div>
+        <div class="footer-text">
+          Whalas™ 2024 @ todos los derechos reservados
+        </div>
+      </footer>
+      
     <script src="catalogo.js"></script>
 </body>
 </html>
