--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     
   <div class="navbar">
     <div class="menu-icon" onclick="toggleMenu()">
-        <img src="ima/menu.png" alt="Menu Icon">
+        <img src="ima/barra-de-menu.png" alt="Menu Icon">
     </div>
     <div class="logo">
         <a href="index.html">
