--- a/catalogo.html
+++ b/catalogo.html
@@ -135,10 +135,9 @@
     
     <footer class="footer">
         <ul class="footer-menu">
-          <li><a href="#Contacto">Contacto</a></li>
-          <li><a href="#Politicas">Políticas De Privacidad</a></li>
-          <li><a href="#terminos">Términos De Servicio</a></li>
-          <li><a href="#polrem">Política De Reembolso</a></li>
+            <li><a href="#Contacto">CONTACTO</a></li>
+            <li><a href="politicas.html">CUESTIONES LEGALES</a></li>
+            <li><a href="#terminos">INSTAGRAM</a></li>
         </ul>
         <div class="payment-methods">
           <img src="ima/pay.png" alt="Formas de pago">
