--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="submenu">
             <a href="#" onclick="toggleSubmenu(event)">Nuestros productos</a>
             <div class="submenu-content" id="submenu-content">
-                <a href="pijama-whalas.html">Pijama Whalas</a>
+                <a href="whalas.html">Pijama Whalas</a>
                 <a href="catalogo.html">Merch</a>
             </div>
         </div>
