--- a/whalas.html
+++ b/whalas.html
@@ -5,92 +5,6 @@
   <link rel="stylesheet" href="whalas.css">
 </head>
 <body>
-  
-  <div class="slider">
-    <div class="slide-track">
-        <div class="slide">
-            <p class="slide-text">🐳Whalas™🐳</p>
-        </div>
-        <div class="slide">
-            <p class="slide-text">25% este verano!</p>
-        </div>
-        <div class="slide">
-            <p class="slide-text">🐳Whalas™🐳</p>
-        </div>
-        <div class="slide">
-            <p class="slide-text">25% este verano!</p>
-        </div>
-        <div class="slide">
-            <p class="slide-text">🐳Whalas™🐳</p>
-        </div>
-        <div class="slide">
-            <p class="slide-text">25% este verano!</p>
-        </div>
-        <div class="slide">
-            <p class="slide-text">🐳Whalas™🐳</p>
-        </div>
-
-        <div class="slide">
-            <p class="slide-text">25% este verano!</p>
-        </div>
-        <div class="slide">
-            <p class="slide-text">🐳Whalas™🐳</p>
-        </div>
-        <div class="slide">
-            <p class="slide-text">25% este verano!</p>
-        </div>
-        <div class="slide">
-            <p class="slide-text">🐳Whalas™🐳</p>
-        </div>
-        <div class="slide">
-            <p class="slide-text">25% este verano!</p>
-        </div>
-        <div class="slide">
-            <p class="slide-text">🐳Whalas™🐳</p>
-        </div>
-        <div class="slide">
-            <p class="slide-text">25% este verano!</p>
-        </div>
-    </div>
-  </div>
-  
-  <div class="navbar">
-    <div class="menu-icon" onclick="toggleMenu()">
-        <img src="ima/barra-de-menu.png" alt="Menu Icon">
-    </div>
-    <div class="logo">
-        <a href="index.html">
-            <img src="ima/logo.png" alt="Logo" style="height: 80px;">
-        </a>
-    </div>
-    
-    <div class="menu" id="menu">
-        <div class="close-icon" onclick="toggleMenu()">
-            <img src="ima/cerrar.png" alt="Close Icon">
-        </div>
-        <a href="index.html">Home</a>
-        <div class="submenu">
-            <a href="#" onclick="toggleSubmenu(event)">Nuestros productos</a>
-            <div class="submenu-content" id="submenu-content">
-                <a href="whalas.html">Pijama Whalas</a>
-                <a href="catalogo.html">Merch</a>
-            </div>
-        </div>
-        <a href="#contacto">Contacto</a>
-        <a href="#sobre-nosotros">Sobre Nosotros</a>
-    </div>
-    <div class="search-cart-container">
-        <div class="search-container">
-            <input type="text" id="search" placeholder="Buscar...">
-            <img src="ima/bus.png" alt="Buscar" id="search-icon">
-        </div>
-        <div class="carrito">
-            <img src="ima/car3.png" alt="Carrito de compras" id="carrito-icon">
-            <h2 id="carrito-total"></h2>
-        </div>
-    </div>
-</div>
- 
   <div class="container">
     <div class="product-slider">
       <div class="product-image" id="product-image">
@@ -103,15 +17,6 @@
         <img src="ima/ima3.png" alt="Pijama de Ballena" class="product-thumb">
       </div>
     </div>
-
-    <!-- Modal for enlarged image view -->
-    <div id="myModal" class="modal">
-      <span class="close">&times;</span>
-      <div class="modal-content">
-        <img id="img01" src="" alt="Product Image">
-      </div>
-    </div>
-
     <div class="product-info">
       <h2 class="product-title">Pijama De Ballena™</h2>
       <p class="product-price">$42.98</p>
@@ -124,92 +29,34 @@
           <button class="size-button" data-size="S">S</button>
         </div>
       </div>
-      <div class="product-add-to-cart">
-        <div class="product-quantity">
-          <label for="quantity-button">Cantidad:</label>
-          <button class="quantity-button" id="quantity-button">
-            <span class="minus">-</span>
-            <span class="quantity">1</span>
-            <span class="plus">+</span>
-          </button>
+      <div class="product-quantity">
+        <label for="quantity">Cantidad:</label>
+        <div id="quantity-buttons">
+          <button class="quantity-button minus">-</button>
+          <input type="number" id="quantity" value="1" min="1">
+          <button class="quantity-button plus">+</button>
         </div>
-        <button class="product-button">AGREGAR AL CARRO</button>
       </div>
+      <button class="product-button">Agregar Al Carrito</button>
       <div class="accordion">
-        <button class="accordion-button">GARANTIZAR</button>
+        <button class="accordion-button"><img src="https://img.icons8.com/?size=100&id=3562&format=png&color=000000" alt="Shipping icon">Envío con seguimiento</button>
         <div class="accordion-content">
-          <p>Garantizar Pijama De Ballena ™</p>
-          <img src="https://i.imgur.com/h9m8H5L.png" alt="Guarantee icon">
+          <p>La mayoría de los pedidos se procesan en un plazo de 1 a 4 días hábiles y se envían desde nuestro almacén en un plazo de 3 a 5 días hábiles (EE. UU., Canadá, Australia y Reino Unido). Después de esto, los pedidos se entregan en un plazo de 12 a 15 días.</p>
         </div>
       </div>
       <div class="accordion">
-        <button class="accordion-button">ENVÍO RASTREADO</button>
+        <button class="accordion-button"><img src="https://img.icons8.com/?size=100&id=2606&format=png&color=000000" alt="Guarantee icon">Garantizar</button>
         <div class="accordion-content">
-          <p>Envío rastreado</p>
-          <img src="https://i.imgur.com/F1eZ7kS.png" alt="Shipping icon">
+          <p>Tu satisfacción es nuestra prioridad. Si no estás satisfecho con tu compra, contáctanos y lo solucionaremos o te devolveremos el dinero. Tu satisfacción está garantizada.</p>
         </div>
       </div>
-      <!-- Nueva sección -->
-      <div class="new-section">
-        <div class="payment-icons">
-          <img src="ima/pay.png" alt="Visa">
-        </div>
-        <h2>Whale Blankie™</h2>
-        <h3>A Worldwide Sensation!</h3>
-        <p>
-          Our <strong>trendy</strong> blanket is adored by people <strong>worldwide!</strong> Its unparalleled comfort, crafted with luxurious flannel fabric, and adorned with a <strong>super cute</strong> whale design, has captured the hearts of <strong>everyone.</strong>
-        </p>
-        <div class="video-container">
-          <img src="ima/1208_1_150x.gif" alt="Whale Blankie Video">
-        </div>
-      </div>
-
-      <!-- Nueva sección 2 -->
-      <div class="new-section2">
-        <h2>¡La manta de invierno más fresca!</h2>
-        <p>
-          Lleva tu <strong>comodidad</strong> al siguiente nivel con nuestra <strong>manta™ de ballena.</strong> ¡La combinación definitiva de <strong>calidez y ternura</strong>, perfecta para cualquier ocasión!
-        </p>
-        <div class="video-container2">
-          <img src="ima/ezgif.com-video-to-gif_1_269f2e7f-38f4-4377-bc36-334427f81477_150x.gif" alt="Whale Blankie Video">
-        </div>
-      </div>
-
     </div>
   </div>
 
-  <div class="icon-bar">
-    <div class="icon-container">
-        <img src="https://img.icons8.com/?size=100&id=3683&format=png&color=1A1A1A" alt="Worldwide Insured Shipping">
-        <p><strong>Worldwide Insured Shipping</strong></p>
-    </div>
-    <div class="icon-container">
-        <img src="https://img.icons8.com/?size=100&id=23264&format=png&color=1A1A1A" alt="24/7 Customer Support">
-        <p><strong>24/7 Customer Support</strong></p>
-    </div>
-    <div class="icon-container">
-        <img src="https://img.icons8.com/?size=100&id=63019&format=png&color=1A1A1A alt="Washer & Drier Friendly">
-        <p><strong>Washer & Drier Friendly</strong></p>
-    </div>
-    <div class="icon-container">
-        <img src="https://img.icons8.com/?size=100&id=794&format=png&color=1A1A1A" alt="Pollution Free">
-        <p><strong>Pollution Free</strong></p>
-    </div>
-</div>
-
-  <footer class="footer">
-    <ul class="footer-menu">
-        <li><a href="#Contacto">CONTACTO</a></li>
-        <li><a href="politicas.html">CUESTIONES LEGALES</a></li>
-        <li><a href="#terminos">INSTAGRAM</a></li>
-    </ul>
-    <div class="payment-methods">
-        <img src="ima/pay.png" alt="Formas de pago">
-    </div>
-    <div class="footer-text">
-        Whalas™ 2024 @ todos los derechos reservados
-    </div>
-</footer>
+  <div id="myModal" class="modal">
+    <span class="close">&times;</span>
+    <img class="modal-content" id="img01">
+  </div>
 
   <script src="whalas.js"></script>
 </body>
