--- a/whalas.html
+++ b/whalas.html
@@ -5,6 +5,92 @@
   <link rel="stylesheet" href="whalas.css">
 </head>
 <body>
+  
+  <div class="slider">
+    <div class="slide-track">
+        <div class="slide">
+            <p class="slide-text">🐳Whalas™🐳</p>
+        </div>
+        <div class="slide">
+            <p class="slide-text">25% este verano!</p>
+        </div>
+        <div class="slide">
+            <p class="slide-text">🐳Whalas™🐳</p>
+        </div>
+        <div class="slide">
+            <p class="slide-text">25% este verano!</p>
+        </div>
+        <div class="slide">
+            <p class="slide-text">🐳Whalas™🐳</p>
+        </div>
+        <div class="slide">
+            <p class="slide-text">25% este verano!</p>
+        </div>
+        <div class="slide">
+            <p class="slide-text">🐳Whalas™🐳</p>
+        </div>
+
+        <div class="slide">
+            <p class="slide-text">25% este verano!</p>
+        </div>
+        <div class="slide">
+            <p class="slide-text">🐳Whalas™🐳</p>
+        </div>
+        <div class="slide">
+            <p class="slide-text">25% este verano!</p>
+        </div>
+        <div class="slide">
+            <p class="slide-text">🐳Whalas™🐳</p>
+        </div>
+        <div class="slide">
+            <p class="slide-text">25% este verano!</p>
+        </div>
+        <div class="slide">
+            <p class="slide-text">🐳Whalas™🐳</p>
+        </div>
+        <div class="slide">
+            <p class="slide-text">25% este verano!</p>
+        </div>
+    </div>
+  </div>
+  
+  <div class="navbar">
+    <div class="menu-icon" onclick="toggleMenu()">
+        <img src="ima/barra-de-menu.png" alt="Menu Icon">
+    </div>
+    <div class="logo">
+        <a href="index.html">
+            <img src="ima/logo.png" alt="Logo" style="height: 80px;">
+        </a>
+    </div>
+    
+    <div class="menu" id="menu">
+        <div class="close-icon" onclick="toggleMenu()">
+            <img src="ima/cerrar.png" alt="Close Icon">
+        </div>
+        <a href="index.html">Home</a>
+        <div class="submenu">
+            <a href="#" onclick="toggleSubmenu(event)">Nuestros productos</a>
+            <div class="submenu-content" id="submenu-content">
+                <a href="whalas.html">Pijama Whalas</a>
+                <a href="catalogo.html">Merch</a>
+            </div>
+        </div>
+        <a href="#contacto">Contacto</a>
+        <a href="#sobre-nosotros">Sobre Nosotros</a>
+    </div>
+    <div class="search-cart-container">
+        <div class="search-container">
+            <input type="text" id="search" placeholder="Buscar...">
+            <img src="ima/bus.png" alt="Buscar" id="search-icon">
+        </div>
+        <div class="carrito">
+            <img src="ima/car3.png" alt="Carrito de compras" id="carrito-icon">
+            <h2 id="carrito-total"></h2>
+        </div>
+    </div>
+</div>
+
   <div class="container">
     <div class="product-slider">
       <div class="product-image" id="product-image">
