--- a/whalas.html
+++ b/whalas.html
@@ -169,6 +169,14 @@
         </div>
       </div>
       
+     <!-- Botón de compartir -->
+     <div class="share-button-wrapper">
+      <button class="share-button" onclick="shareContent()">
+        <img src="https://img.icons8.com/?size=100&id=105529&format=png&color=000000" alt="Share Icon"> Share
+      </button>
+    </div>
+  </div>
+
       <div id="myModal" class="modal">
         <span class="close">&times;</span>
         <img class="modal-content" id="img01">
