--- a/whalas.html
+++ b/whalas.html
@@ -301,7 +301,7 @@
       <ul class="footer-menu">
         <li><a href="#Contacto">CONTACTO</a></li>
         <li><a href="politicas.html">CUESTIONES LEGALES</a></li>
-        <a href="https://www.instagram.com/leozama21/">INSTAGRAM</a>
+        <li><a href="#terminos">INSTAGRAM</a></li>
       </ul>
       <div class="payment-methods">
         <img src="ima/pay.png" alt="Formas de pago">
