--- a/politicas.html
+++ b/politicas.html
@@ -285,7 +285,7 @@
     <ul class="footer-menu">
       <li><a href="#Contacto">CONTACTO</a></li>
       <li><a href="politicas.html">CUESTIONES LEGALES</a></li>
-      <li><a href="#terminos">INSTAGRAM</a></li>
+      <li><a href="https://www.instagram.com/leozama21/" target="_blank">INSTAGRAM</a></li> <!-- Enlace actualizado -->
     </ul>
     <div class="payment-methods">
       <img src="ima/pay.png" alt="Formas de pago">
