--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <a href="catalogo.html">Merch</a>
             </div>
         </div>
-        <a href="#contacto">Contacto</a>
+        <a href="contacto.html">Contacto</a>
         <a href="#sobre-nosotros">Sobre Nosotros</a>
     </div>
     <div class="search-cart-container">
@@ -305,7 +305,7 @@
     
     <footer class="footer">
         <ul class="footer-menu">
-            <li><a href="#Contacto">CONTACTO</a></li>
+            <li><a href="contacto.html">CONTACTO</a></li>
             <li><a href="politicas.html">CUESTIONES LEGALES</a></li>
             <li><a href="#terminos">INSTAGRAM</a></li>
         </ul>
