--- a/politicas.html
+++ b/politicas.html
@@ -78,7 +78,7 @@
                     <a href="catalogo.html">Merch</a>
                 </div>
             </div>
-            <a href="#contacto">Contacto</a>
+            <a href="contacto.html">Contacto</a>
             <a href="#sobre-nosotros">Sobre Nosotros</a>
         </div>
         <div class="search-container">
