--- a/whalas.html
+++ b/whalas.html
@@ -78,7 +78,7 @@
                 <a href="catalogo.html">Merch</a>
             </div>
         </div>
-        <a href="#contacto">Contacto</a>
+        <a href="contacto.html">Contacto</a>
         <a href="#sobre-nosotros">Sobre Nosotros</a>
     </div>
     <div class="search-cart-container">
@@ -93,7 +93,7 @@
     </div>
 </div>
 
-  <div class="container">
+  <div class="container1">
     <div class="product-slider">
       <div class="product-image" id="product-image">
         <img src="product-1.jpg" alt="Pijama de Ballena">
@@ -149,7 +149,7 @@
             <h2>Whale Blankie™</h2>
             <h3>A Worldwide Sensation!</h3>
             <p>
-              Our <strong>trendy</strong> blanket is adored by people <strong>worldwide!</strong> Its unparalleled comfort, crafted with luxurious flannel fabric, and adorned with a <strong>super cute</strong> whale design, has captured the hearts of <strong>everyone.</strong>
+              ¡Nuestra manta de moda <strong>adorada por personas de todo el mundo!</strong> Su comodidad incomparable, confeccionada con lujosa tela de franela y adornada con un diseño de ballena súper cortado ,<strong>ha capturado los corazones de todos.</strong>
             </p>
             <div class="video-container">
               <img src="ima/1208_1_150x.gif" alt="Whale Blankie Video">
