--- a/contacto.html
+++ b/contacto.html
@@ -154,7 +154,7 @@
 
     <footer class="footer">
         <ul class="footer-menu">
-            <li><a href="#Contacto">CONTACTO</a></li>
+            <li><a href="contacto.html">CONTACTO</a></li>
             <li><a href="politicas.html">CUESTIONES LEGALES</a></li>
             <li><a href="https://www.instagram.com/leozama21/" target="_blank">INSTAGRAM</a></li> <!-- Enlace actualizado -->
         </ul>
@@ -165,6 +165,6 @@
           Whalas™ 2024 @ todos los derechos reservados
         </div>
       </footer>
-
+      <script src="contacto.js"></script>
 </body>
 </html>
