--- a/politicas.html
+++ b/politicas.html
@@ -283,7 +283,7 @@
   
   <footer class="footer">
     <ul class="footer-menu">
-      <li><a href="#Contacto">CONTACTO</a></li>
+      <li><a href="contacto.html">CONTACTO</a></li>
       <li><a href="politicas.html">CUESTIONES LEGALES</a></li>
       <li><a href="https://www.instagram.com/leozama21/" target="_blank">INSTAGRAM</a></li> <!-- Enlace actualizado -->
     </ul>
