--- a/whalas.html
+++ b/whalas.html
@@ -93,7 +93,7 @@
     </div>
 </div>
 
-  <div class="container">
+  <div class="container1">
     <div class="product-slider">
       <div class="product-image" id="product-image">
         <img src="product-1.jpg" alt="Pijama de Ballena">
