--- a/catalogo.html
+++ b/catalogo.html
@@ -79,7 +79,7 @@
                 </div>
             </div>
             <a href="contacto.html">Contacto</a>
-            <a href="#sobre-nosotros">Sobre Nosotros</a>
+            <a href="sb.html">Sobre Nosotros</a>
         </div>
         <div class="search-container">
             <input type="text" id="search" placeholder="Buscar..." oninput="buscarProducto()">
