--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             </div>
         </div>
         <a href="contacto.html">Contacto</a>
-        <a href="#sobre-nosotros">Sobre Nosotros</a>
+        <a href="sb.html">Sobre Nosotros</a>
     </div>
     <div class="search-cart-container">
         <div class="search-container">
