--- a/politicas.html
+++ b/politicas.html
@@ -283,9 +283,10 @@
   
   <footer class="footer">
     <ul class="footer-menu">
-      <li><a href="contacto.html">CONTACTO</a></li>
-      <li><a href="politicas.html">CUESTIONES LEGALES</a></li>
-      <li><a href="https://www.instagram.com/leozama21/" target="_blank">INSTAGRAM</a></li> <!-- Enlace actualizado -->
+      <li style="font-weight: bold;">ENLACES RÁPIDOS</li>
+      <li><a href="contacto.html">Contacto</a></li>
+      <li><a href="politicas.html">Cuestiones legales</a></li>
+      <li><a href="https://www.instagram.com/leozama21/" target="_blank">Intagram</a></li>
     </ul>
     <div class="payment-methods">
       <img src="ima/pay.png" alt="Formas de pago">
