--- a/sb.html
+++ b/sb.html
@@ -62,7 +62,7 @@
     </div>
     <div class="logo">
         <a href="index.html">
-            <img src="ima/logo.png" alt="Logo" style="height: 80px;">
+            <img src="ima/logo.png" alt="Logo">
         </a>
     </div>
     
@@ -107,20 +107,20 @@
     
 
 
-<footer class="footer">
-    <ul class="footer-menu">
-        <li style="font-weight: bold;">ENLACES RÁPIDOS</li>
-        <li><a href="contacto.html">Contacto</a></li>
-        <li><a href="politicas.html">Cuestiones legales</a></li>
-        <li><a href="https://www.instagram.com/leozama21/" target="_blank">Intagram</a></li>
-    </ul>
-    <div class="payment-methods">
-      <img src="ima/pay.png" alt="Formas de pago">
-    </div>
-    <div class="footer-text">
-      Whalas™ 2024 @ todos los derechos reservados
-    </div>
-  </footer>
+    <footer class="footer">
+        <ul class="footer-menu">
+            <li style="font-weight: bold;">ENLACES RÁPIDOS</li>
+            <li><a href="contacto.html">Contacto</a></li>
+            <li><a href="politicas.html">Cuestiones legales</a></li>
+            <li><a href="https://www.instagram.com/leozama21/" target="_blank">Intagram</a></li>
+        </ul>
+        <div class="payment-methods">
+          <img src="ima/pay.png" alt="Formas de pago">
+        </div>
+        <div class="footer-text">
+          Whalas™ 2024 @ todos los derechos reservados
+        </div>
+      </footer>
   
   
   
