--- a/whalas.html
+++ b/whalas.html
@@ -62,7 +62,7 @@
     </div>
     <div class="logo">
         <a href="index.html">
-            <img src="ima/logo.png" alt="Logo" style="height: 80px;">
+            <img src="ima/logo.png" alt="Logo">
         </a>
     </div>
     
