--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
     </div>
     <div class="search-cart-container">
         <div class="search-container">
-            <input type="text" id="search" placeholder="Buscar...">
-            <img src="ima/bus.png" alt="Buscar" id="search-icon">
+            <input type="text" id="search" placeholder="Buscar..." oninput="buscarProducto()">
+            <img src="ima/bus.png" alt="Buscar" id="search-icon" onclick="toggleSearch()">
         </div>
-        <div class="carrito">
+        <div class="carrito" onclick="abrirModal()">
             <img src="ima/car3.png" alt="Carrito de compras" id="carrito-icon">
             <h2 id="carrito-total"></h2>
         </div>
