--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
         </div>
         <div class="content">
             <h2 class="title">Whalas</h2>
-            <p class="description">Comodidad, elegancia son factores que tiene nuestro producto.</p>
-            <p class="description">Si te decides a la escuelta con ropa normal, ¿por qué no usar nuestro pijama Whales?</p>
+            <p class="description">Comodidad y elegancia son características de nuestro producto.</p>
+            <p class="description">Si te decides a estar cómodo con ropa normal, ¿por qué no usar nuestro pijama Whales?</p>
             <a href="#" class="button">Comprar</a>
         </div>
     </div>
@@ -269,7 +269,7 @@
     </p>
             </div>
             <div class="slide3">
-                <p class="slide-text3">L🐳Whalas™🐳
+                <p class="slide-text3">🐳Whalas™🐳
     </p>
             </div>
         </div>
@@ -293,7 +293,7 @@
                 <p class="old-price">$59.98</p>
                 <p class="price">$42.98</p>
             </div>
-            <p>Pijamas Whalas la mejor pijama de ballena que todo el mundo adora.</p>
+            <p>Pijamas Whalas: la mejor pijama de ballena que todo el mundo adora.</p>
             <button class="add-to-cart">Agregar al Carro</button>
         </div>
     </div>
@@ -310,7 +310,7 @@
             <li style="font-weight: bold;">ENLACES RÁPIDOS</li>
             <li><a href="contacto.html">Contacto</a></li>
             <li><a href="politicas.html">Cuestiones legales</a></li>
-            <li><a href="https://www.instagram.com/leozama21/" target="_blank">Intagram</a></li>
+            <li><a href="https://www.instagram.com/leozama21/" target="_blank">Instagram</a></li>
         </ul>
         <div class="payment-methods">
             <img src="ima/pay.png" alt="Formas de pago">
