--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     
   <div class="navbar">
     <div class="menu-icon" onclick="toggleMenu()">
-        <img src="ima/barra-de-menu.png" alt="Menu Icon">
+        &#9776; <!-- Icono de hamburguesa -->
     </div>
     <div class="logo">
         <a href="index.html">
@@ -68,7 +68,7 @@
     
     <div class="menu" id="menu">
         <div class="close-icon" onclick="toggleMenu()">
-            <img src="ima/cerrar.png" alt="Close Icon">
+            &times; <!-- Icono de cerrar -->
         </div>
         <a href="index.html">Inicio</a>
         <div class="submenu">
